Define build image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,14 @@ version: 2.1
 orbs:
   orb-tools: circleci/orb-tools@volatile
   utils: devops-workflow/utils@volatile
+
 jobs:
   setup:
-    - steps:
-        - utils/get_orb_name
-        
+    docker:
+      - image: circleci/python
+    steps:
+      - utils/get_orb_name
+
 workflows:
   btd:
     jobs:
